--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "ava"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -37,6 +37,12 @@
   },
   "devDependencies": {
     "ava": "*",
-    "xdg-trash": "^2.0.1"
+    "xdg-trash": "^2.0.1",
+    "xo": "*"
+  },
+  "xo": {
+    "ignore": [
+      "test.js"
+    ]
   }
 }
